--- a/_includes/templates/footer.liquid
+++ b/_includes/templates/footer.liquid
@@ -36,13 +36,9 @@
     <a class="text-gray" href="{{ docs.owner_url }}" rel="noreferrer" target="_blank">
         {{- author -}}
     </a>
-    {{ __.revision | default: "Revision" }}
-    <a class="text-gray" href="{{ docs.repository_url }}/commit/{{ docs.build_revision }}" title="{{ docs.build_revision }}" rel="noreferrer" target="_blank">
-        {{- docs.build_revision | slice: 0, 7 -}}
-    </a>
     <br>
     <div class="generator">
-        Powered by
-        <a href="https://pages.github.com" rel="noreferrer" target="_blank" title="github-pages v{{ docs.versions.github-pages }}">GitHub Pages</a>
+        Devloped by
+        <a href="https://ptprashanttripathi.github.io" rel="noreferrer" target="_blank" title="Pt. Prashant Tripathi">Pt. Prashant Tripathi</a>
     </div>
 </div>
