--- a/_includes/templates/footer.liquid
+++ b/_includes/templates/footer.liquid
@@ -38,7 +38,7 @@
     </a>
     <br>
     <div class="generator">
-        Devloped by
+        Developed by
         <a href="https://ptprashanttripathi.github.io" rel="noreferrer" target="_blank" title="Pt. Prashant Tripathi">Pt. Prashant Tripathi</a>
     </div>
 </div>
